--- a/finimalism7.css
+++ b/finimalism7.css
@@ -1296,7 +1296,8 @@ div[data-role="controlgroup"] a[data-role="button"] {
 }
 
 .emby-button.show-focus:focus {
-  background: linear-gradient(90deg, rgb(40.392% 6.275% 50.98%) 0%, rgb(40.023% 6.794% 51.27%) 6.25%, rgb(38.929% 8.334% 52.13%) 12.5%, rgb(37.154% 10.835% 53.525%) 18.75%, rgb(34.764% 14.2% 55.403%) 25%, rgb(31.852% 18.3% 57.69%) 31.25%, rgb(28.53% 22.978% 60.301%) 37.5%, rgb(24.925% 28.054% 63.133%) 43.75%, rgb(21.176% 33.333% 66.078%) 50%, rgb(17.428% 38.612% 69.024%) 56.25%, rgb(13.823% 43.688% 71.856%) 62.5%, rgb(10.501% 48.366% 74.466%) 68.75%, rgb(7.589% 52.467% 76.754%) 75%, rgb(5.199% 55.832% 78.632%) 81.25%, rgb(3.423% 58.332% 80.027%) 87.5%, rgb(2.33% 59.872% 80.886%) 93.75%, rgb(1.961% 60.392% 81.176%) 100% ) !important;
+  filter: drop-shadow(0 0 1px rgba(2, 2, 8px, 0.75));
+  transform: scale(2);
 }
 .paper-icon-button-light.show-focus:focus {
     color: rgba(var(--accent)) !important;
@@ -2673,7 +2674,7 @@ button[is="paper-icon-button-light"].cardOverlayButton.cardOverlayButton-hover.i
 
 @media (min-width: 60em) {
 	.headerTabs.sectionTabs .tabs-viewmenubar.emby-tabs.focusable.scrollX .emby-tab-button.emby-button.emby-tab-button-active {
-		background: #fff;
+		background: #fff !important;
 		color: #000 !important;
 		border-radius: 2em;
 		height: 2em;
