--- a/finimalism7.css
+++ b/finimalism7.css
@@ -3213,6 +3213,23 @@ a[href*="themoviedb.org/collection"]::before {
     vertical-align: middle;
 }
 
+/* TheTVDb link replaced with logo */
+a[href*="thetvdb.com"]::before {
+    content: "";
+    display: inline-block;
+    width: 50px;
+    height: 25px;
+    background-image: url('https://i.imgur.com/lIz6Ka5.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin-right: 5px;
+    vertical-align: middle;
+}
+
+a[href*="thetvdb.com"] {
+    font-size: 0;
+}
+
 .itemExternalLinks.focuscontainer-x {
 	color: #000a;
 }
