--- a/finimalism7.css
+++ b/finimalism7.css
@@ -3219,7 +3219,7 @@ a[href*="thetvdb.com"]::before {
     display: inline-block;
     width: 50px;
     height: 25px;
-    background-image: url('https://i.imgur.com/lIz6Ka5.png');
+    background-image: url('https://i.imgur.com/Jp1VNqp.png');
     background-size: contain;
     background-repeat: no-repeat;
     margin-right: 5px;
